data/test/type_check/fail/issue_30c.v
reg r;
assign r = 1;
